crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__json__tests__array_unclosed.snap
---
source: crates/parse/src/grammar/json.rs
expression: "parse_json(r#\"[\"hello\", \"#)"
---
Group(JsonList) at 0:0 - 0:9 {
    Token(LBracket) `[` at 0:0 - 0:1
    Token(QuotedString) `"hello"` at 0:1 - 0:8
    Token(Comma) `,` at 0:8 - 0:9
    Error `Expected one of '{', '[', 'Quoted String'` at 0:9 - 0:9
    Error `Expected one of 'true', 'false', 'null'` at 0:9 - 0:9
    Error `Error while parsing 'Float'` at 0:9 - 0:9
    Error `Expected one of ']'` at 0:9 - 0:9
}

