crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__json__tests__boolean_false.snap
---
source: crates/parse/src/grammar/json.rs
expression: "parse_json(\"false\")"
---
Joined(BooleanFalse) `false` at 0:0 - 0:5

