crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__json__tests__boolean_true.snap
---
source: crates/parse/src/grammar/json.rs
expression: "parse_json(\"true\")"
---
Joined(BooleanTrue) `true` at 0:0 - 0:4

