crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__json__tests__null.snap
---
source: crates/parse/src/grammar/json.rs
expression: "parse_json(\"null\")"
---
Joined(JsonNull) `null` at 0:0 - 0:4

