crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__json__tests__object_empty.snap
---
source: crates/parse/src/grammar/json.rs
expression: "parse_json(\"{}\")"
---
Group(JsonObject) at 0:0 - 0:2 {
    Token(LCurly) `{` at 0:0 - 0:1
    Token(RCurly) `}` at 0:1 - 0:2
}

